--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -45,6 +45,10 @@
 			<version>1.18.6</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
